syntax="proto3";
package pb;
option go_package = "internals/pb";


message Category{
    string id = 1;
    string name = 2;
    string description =3;
}

message CreateCategoryRequest{
    string name = 1;
    string description =2;
}

message blank{ }


message CategoryResponse{
    Category category = 1;
}

message CategoryList {
    repeated Category categories = 1;
}


service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse){}
    rpc ListCategories(blank) returns (CategoryList){}
}